# marmota_2dtoolbox

./: CMakeLists.txt  LICENSE  README.md
conf/: config.yml  log4cpp.properties
include/async/: import_sheet.h  task.h  task.hpp  worker.h  worker.hpp
include/db/: assets_db.h
include/editor/: editor.h  editor_gui.h  editor_gui_import_sheet.h  editor_import_sheet_panel.h  editor_main_panel.h  editor_model.h  editor_panel.h
include/editor/model/: entity.h  entity_state.h  import_sheet_model.h  sprites_model.h
include/editor/panels/: editor_import_sheet_panel.h  editor_main_panel.h  editor_menu.h  editor_panel.h  editor_sprites.h  editor_state.h
include/editor/services/: import_sheet.h
include/marmot_studio/: editor.h
include/marmot_studio/async/: create_frame.h  create_sprite.h  create_state.h  delete_state.h  event_queue.h  import_sheet.h  open_project.h  remove_sprite.h  update_sprite.h  update_state.h
include/marmot_studio/db/: asset_db.h
include/marmot_studio/editor/: editor.h
include/marmot_studio/editor/model/: editor_sprite.h  editor_state.h  entity.h  entity_state.h  import_sheet_model.h  menu_model.h  sprites_model.h  update_event.h
include/marmot_studio/editor/panels/: editor_main_panel.h  editor_menu.h  editor_panel.h  editor_sprites.h
include/marmot_studio/editor/services/: create_entity.h  create_sprite.h  editor_cmd.h  import_sheet.h  open_project.h  update_sprite.h
include/marmot_studio/evt/: create_frame_event.h  create_sprite_event.h  create_state_event.h  delete_sprite_event.h  delete_state_event.h  init_event.h  update_entity_event.h  update_event.h  update_sprite_event.h  update_state_event.h
include/marmot_studio/model/: editor_frame.h  editor_sprite.h  editor_state.h
include/marmot_studio/panels/: editor_import_sheet_panel.h  editor_main_panel.h  editor_menu.h  editor_panel.h  editor_sprites.h  editor_sprites_panel.h
include/marmot_studio/services/: sprites_model.h
include/marmota/: assets_db.h  marmota_asset_store.h  marmota_asset_store.hpp
include/marmota/model/: marmota_cache.hpp  marmota_frame.hpp  marmota_level.hpp  marmota_model.hpp  marmota_sprite.hpp  marmota_state.hpp  marmota_types.hpp  model.h  model.hpp  sprite.h  sprite.hpp  state.h  state.hpp
include/marmota/tables/: db_error.hpp  index_db.h  index_db.hpp  index_table.h  index_table.hpp  table_entity.h  table_entity.hpp  table_frame.h  table_frame.hpp  table_level.hpp  table_level_sprite.hpp  table_sprite.hpp  table_state.h  table_state.hpp
include/model/: import_sheet_model.h  model.h  sprite.h  state.h
include/utils/: sdl_utils.h
src/: main.cpp
src/async/: import_sheet.cpp  worker.cpp
src/db/: assets_db.cpp
src/editor/: editor.cpp  editor_gui.cpp  editor_gui_import_sheet.cpp  editor_import_sheet_panel.cpp  editor_main_panel.cpp  editor_model.cpp
src/editor/model/: entity.cpp  entity_state.cpp  import_sheet_model.cpp  sprites_model.cpp
src/editor/panels/: editor_import_sheet_panel.cpp  editor_main_panel.cpp  editor_sprites.cpp  editor_state.cpp
src/editor/services/: import_sheet.cpp
src/marmot_studio/: marmot_studio.cpp
src/marmot_studio/async/: create_frame.cpp  create_sprite.cpp  create_state.cpp  delete_state.cpp  event_queue.cpp  open_project.cpp  remove_sprite.cpp  update_sprite.cpp  update_state.cpp
src/marmot_studio/db/: asset_db.cpp
src/marmot_studio/editor/model/: editor_sprite.cpp  editor_state.cpp  entity.cpp  entity_state.cpp  sprites_model.cpp
src/marmot_studio/editor/panels/: editor_import_sheet_panel.cpp  editor_main_panel.cpp  editor_menu.cpp  editor_sprites.cpp
src/marmot_studio/editor/services/: create_entity.cpp  editor_cmd.cpp  import_sheet.cpp  open_project.cpp
src/marmot_studio/evt/: create_frame_event.cpp  create_sprite_event.cpp  create_state_event.cpp  delete_sprite_event.cpp  delete_state_event.cpp  init_event.cpp  update_sprite_event.cpp  update_state_event.cpp
src/marmot_studio/model/: editor_state.cpp
src/marmot_studio/panels/: editor_import_sheet_panel.cpp  editor_main_panel.cpp  editor_menu.cpp  editor_sprites.cpp  editor_sprites_panel.cpp
src/marmot_studio/services/: sprites_model.cpp
src/marmota/: assets_db.cpp  marmota_asset_store.cpp
src/marmota/model/: marmota_cache.cpp  marmota_frame.cpp  marmota_sprite.cpp  marmota_state.cpp  model.cpp
src/marmota/tables/: index_table.cpp  table_entity.cpp  table_frame.cpp  table_level.cpp  table_level_sprite.cpp  table_sprite.cpp  table_state.cpp
src/model/: import_sheet_model.cpp  model.cpp
src/tools/: demo.cpp
